@@ -2049,6 +2049,140 @@ int re_estimate (char *model_spec, MODEL *tmpmod,
 
 /* ........................................................... */
 
+struct label_field {
+    int label;
+    char literal[8];
+    int vnum;
+};
+
+static void field_init (struct label_field *f)
+{
+    f->label = 0;
+    f->literal[0] = '\0';
+    f->vnum = -1;
+}
+
+static int copy_field_literal (const char *s, struct label_field *f)
+{
+    int len = strlen(s) - 2;
+
+    if (len > 6) len = 6;
+    strncat(f->literal, s + 1, len);
+}
+
+/* originating command is of form:
+
+     genr markers=f1,f2,f3,...
+
+   we're assuming that we're just getting the f* part here
+*/
+
+int generate_obs_markers (const double **Z, DATAINFO *pdinfo,
+			  char *s)
+{
+    struct label_field fields[3];
+    char *p;
+    int inquot = 0;
+    int i, t, nf = 0;
+    int err = 0;
+
+    if (*s == ',' || *s == '\0') return E_SYNTAX;
+
+    /* break up the comma separated fields */
+    p = s;
+    nf = 0;
+    while (*p) {
+	if (*p == '"') {
+	    inquot = !inquot;
+	}
+	if (!inquot && *p == ',') {
+	    nf++;
+	    if (nf > 2) {
+		err = 1;
+		break;
+	    }
+	    *p = '\0';
+	}
+	p++;
+    }
+    nf++;
+
+    if (err) return E_SYNTAX;
+
+    p = s;
+    for (i=0; i<nf && !err; i++) {
+	field_init(&fields[i]);
+	if (i > 0) p += strlen(p) + 1;
+	if (*p == '"') {
+	    /* literal string */
+	    copy_field_literal(p, &fields[i]);
+	}
+	else if (!strcmp(p, "marker")) {
+	    /* existing obs marker */
+	    if (pdinfo->S == NULL) {
+		err = E_UNKVAR;
+	    } else {
+		fields[i].label = 1;
+	    }
+	}
+	else {
+	    /* should be the name of a variable */
+	    fields[i].vnum = varindex(pdinfo, p);
+
+	    if (fields[i].vnum >= pdinfo->v) {
+		err = E_UNKVAR;
+	    } 
+	}
+    }
+
+    if (pdinfo->S == NULL) {
+	char **S = allocate_case_markers(pdinfo->n);
+
+	if (S == NULL) {
+	    return E_ALLOC;
+	} else {
+	    pdinfo->S = S;
+	    pdinfo->markers = 1;
+	}
+    }
+
+    for (t=0; t<pdinfo->n; t++) {
+	char tmp[64] = {0};
+	char oldS[OBSLEN] = {0};
+
+	if (pdinfo->S[t][0] != '\0') {
+	    strcpy(oldS, pdinfo->S[t]);
+	}
+
+	pdinfo->S[t][0] = '\0';
+	
+	for (i=0; i<nf; i++) {
+	    if (fields[i].label) {
+		strcat(tmp, oldS);
+	    }
+	    else if (fields[i].literal[0] != '\0') {
+		strcat(tmp, fields[i].literal);
+	    }
+	    else if (fields[i].vnum > 0) {
+		int zint = (int) Z[fields[i].vnum][t];
+
+		if (zint < 999999 && zint > -99999) {
+		    char numstr[8];
+
+		    sprintf(numstr, "%d", zint);
+		    strcat(tmp, numstr);
+		}
+	    }
+	}
+
+	strncat(pdinfo->S[t], tmp, OBSLEN - 1);
+    }
+
+    return err;
+}
+
+/* ........................................................... */
+
 int guess_panel_structure (double **Z, DATAINFO *pdinfo)
 {
     int v, panel;
